// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateFieldComponent Component base should return a DateFieldComponent object as Calendar 1`] = `
<div
  className="DayPicker"
  lang="en"
>
  <div
    className="DayPicker-wrapper"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="DayPicker-NavBar"
    >
      <span
        aria-label="Previous Month"
        className="DayPicker-NavButton DayPicker-NavButton--prev"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      />
      <span
        aria-label="Next Month"
        className="DayPicker-NavButton DayPicker-NavButton--next"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      />
    </div>
    <div
      className="DayPicker-Months"
    >
      <div
        className="DayPicker-Month"
        role="grid"
      >
        <div
          className="DayPicker-Caption"
          role="heading"
        >
          <div
            onKeyUp={[Function]}
          >
            February 2020
          </div>
        </div>
        <div
          className="DayPicker-Weekdays"
          role="rowgroup"
        >
          <div
            className="DayPicker-WeekdaysRow"
            role="row"
          >
            <div
              className="DayPicker-Weekday"
              role="columnheader"
            >
              <abbr
                title="Sunday"
              >
                Su
              </abbr>
            </div>
            <div
              className="DayPicker-Weekday"
              role="columnheader"
            >
              <abbr
                title="Monday"
              >
                Mo
              </abbr>
            </div>
            <div
              className="DayPicker-Weekday"
              role="columnheader"
            >
              <abbr
                title="Tuesday"
              >
                Tu
              </abbr>
            </div>
            <div
              className="DayPicker-Weekday"
              role="columnheader"
            >
              <abbr
                title="Wednesday"
              >
                We
              </abbr>
            </div>
            <div
              className="DayPicker-Weekday"
              role="columnheader"
            >
              <abbr
                title="Thursday"
              >
                Th
              </abbr>
            </div>
            <div
              className="DayPicker-Weekday"
              role="columnheader"
            >
              <abbr
                title="Friday"
              >
                Fr
              </abbr>
            </div>
            <div
              className="DayPicker-Weekday"
              role="columnheader"
            >
              <abbr
                title="Saturday"
              >
                Sa
              </abbr>
            </div>
          </div>
        </div>
        <div
          className="DayPicker-Body"
          role="rowgroup"
        >
          <div
            className="DayPicker-Week"
            role="row"
          >
            <div
              aria-disabled={true}
              className="DayPicker-Day DayPicker-Day--outside"
            />
            <div
              aria-disabled={true}
              className="DayPicker-Day DayPicker-Day--outside"
            />
            <div
              aria-disabled={true}
              className="DayPicker-Day DayPicker-Day--outside"
            />
            <div
              aria-disabled={true}
              className="DayPicker-Day DayPicker-Day--outside"
            />
            <div
              aria-disabled={true}
              className="DayPicker-Day DayPicker-Day--outside"
            />
            <div
              aria-disabled={true}
              className="DayPicker-Day DayPicker-Day--outside"
            />
            <div
              aria-disabled={false}
              aria-label="Sat Feb 1, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={0}
            >
              1
            </div>
          </div>
          <div
            className="DayPicker-Week"
            role="row"
          >
            <div
              aria-disabled={false}
              aria-label="Sun Feb 2, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              2
            </div>
            <div
              aria-disabled={false}
              aria-label="Mon Feb 3, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              3
            </div>
            <div
              aria-disabled={false}
              aria-label="Tue Feb 4, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              4
            </div>
            <div
              aria-disabled={false}
              aria-label="Wed Feb 5, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              5
            </div>
            <div
              aria-disabled={false}
              aria-label="Thu Feb 6, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              6
            </div>
            <div
              aria-disabled={false}
              aria-label="Fri Feb 7, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              7
            </div>
            <div
              aria-disabled={false}
              aria-label="Sat Feb 8, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              8
            </div>
          </div>
          <div
            className="DayPicker-Week"
            role="row"
          >
            <div
              aria-disabled={false}
              aria-label="Sun Feb 9, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              9
            </div>
            <div
              aria-disabled={false}
              aria-label="Mon Feb 10, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              10
            </div>
            <div
              aria-disabled={false}
              aria-label="Tue Feb 11, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              11
            </div>
            <div
              aria-disabled={false}
              aria-label="Wed Feb 12, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              12
            </div>
            <div
              aria-disabled={false}
              aria-label="Thu Feb 13, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              13
            </div>
            <div
              aria-disabled={false}
              aria-label="Fri Feb 14, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              14
            </div>
            <div
              aria-disabled={false}
              aria-label="Sat Feb 15, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              15
            </div>
          </div>
          <div
            className="DayPicker-Week"
            role="row"
          >
            <div
              aria-disabled={false}
              aria-label="Sun Feb 16, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              16
            </div>
            <div
              aria-disabled={false}
              aria-label="Mon Feb 17, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              17
            </div>
            <div
              aria-disabled={false}
              aria-label="Tue Feb 18, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              18
            </div>
            <div
              aria-disabled={false}
              aria-label="Wed Feb 19, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              19
            </div>
            <div
              aria-disabled={false}
              aria-label="Thu Feb 20, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              20
            </div>
            <div
              aria-disabled={false}
              aria-label="Fri Feb 21, 2020"
              aria-selected={false}
              className="DayPicker-Day DayPicker-Day--today"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              21
            </div>
            <div
              aria-disabled={false}
              aria-label="Sat Feb 22, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              22
            </div>
          </div>
          <div
            className="DayPicker-Week"
            role="row"
          >
            <div
              aria-disabled={false}
              aria-label="Sun Feb 23, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              23
            </div>
            <div
              aria-disabled={false}
              aria-label="Mon Feb 24, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              24
            </div>
            <div
              aria-disabled={false}
              aria-label="Tue Feb 25, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              25
            </div>
            <div
              aria-disabled={false}
              aria-label="Wed Feb 26, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              26
            </div>
            <div
              aria-disabled={false}
              aria-label="Thu Feb 27, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              27
            </div>
            <div
              aria-disabled={false}
              aria-label="Fri Feb 28, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              28
            </div>
            <div
              aria-disabled={false}
              aria-label="Sat Feb 29, 2020"
              aria-selected={false}
              className="DayPicker-Day"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="gridcell"
              tabIndex={-1}
            >
              29
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateFieldComponent Component base should return a DateFieldComponent object as Input 1`] = `
<div
  className="DayPickerInput"
  style={
    Object {
      "container": Object {
        "input": Object {
          "padding": "1rem",
        },
      },
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="YYYY-M-D"
    value=""
  />
</div>
`;

exports[`DateFieldComponent Component base should return a DateFieldComponent object as Input displaying value as 12/18/2019 with default format 1`] = `
<div
  className="DayPickerInput"
  style={
    Object {
      "container": Object {
        "input": Object {
          "padding": "1rem",
        },
      },
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="YYYY-M-D"
    value="12/18/2019"
  />
</div>
`;

exports[`DateFieldComponent Component base should return a DateFieldComponent object as Input displaying value as 2019-12-18 with Format YYYY-MM-DD 1`] = `
<div
  className="DayPickerInput"
  style={
    Object {
      "container": Object {
        "input": Object {
          "padding": "1rem",
        },
      },
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="YYYY-M-D"
    value="2019-12-18"
  />
</div>
`;

exports[`DateFieldComponent Component base should return a DateFieldComponent object as Input with Japanese locale 1`] = `
<div
  className="DayPickerInput"
  style={
    Object {
      "container": Object {
        "input": Object {
          "padding": "1rem",
        },
      },
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="YYYY-M-D"
    value="2019年12月18日"
  />
</div>
`;
